@@ -9,6 +9,11 @@ of Inline::C. This enables us to ship binary distributions.
 Copy htdocs/agfolder.png to your Apache
 icons directory.
 
+If you enable the GalleryMaxThumbnailsPerPage option you
+need to update your index.tpl template file or use the
+new templates. You also need to copy templates/default/gallery.css
+to your DocumentRoot.
+
 To update to the new layout, copy templates/new/gallery.css 
 to your DocumentRoot and copy templates/new/*.tpl to your
 GalleryTemplateDir. 
